--- a/apps/internship/yaarme/task-5/linkedin/static/app.css
+++ b/apps/internship/yaarme/task-5/linkedin/static/app.css
@@ -206,6 +206,7 @@ img {
         align-items: flex-start;
         margin: 0;
         padding: 0;
+        height: 100%;
     }
 
     .chat-item {
